--- a/shop/static/shop/css/checkout.css
+++ b/shop/static/shop/css/checkout.css
@@ -109,3 +109,8 @@
 .page-checkout .htmx-indicator{
   width: 20px;
 }
+
+.page-checkout .payBtn.no-items{
+  opacity: .5;
+  pointer-events: none;
+}
