fixed nav bar not on ajax requests from callback page and 'go home' btn on empty cart page

--- a/shop/templates/shop/partials/_cart_items.html
+++ b/shop/templates/shop/partials/_cart_items.html
@@ -90,6 +90,8 @@
 <div 
 style="color: red;  background-color:lightblue; padding: 1.5rem 0.5rem; border-radius:.3rem"
 hx-boost="true"
+hx-target="#main-container"
+hx-swap="outerHTML transition:true"
 >
     No items added to cart , 
     <a 
