--- a/shop/templates/shop/payment_success.html
+++ b/shop/templates/shop/payment_success.html
@@ -3,15 +3,15 @@
 
 {% block content %}
 
-<h1 style="text-align: center;"> Payment info </h1>
-<h1 style="text-align: center;"
-class="payment-msg {% if message == 'Failed' %}failed{% endif %}"
-> Payment {{message}} </h1>
+<main id="main-container">
+    <h1 style="text-align: center;"> Payment info </h1>
+    <h1 style="text-align: center;"
+    class="payment-msg {% if message == 'Failed' %}failed{% endif %}"
+    > Payment {{message}} </h1>
 
-<a
-hx-boost="true"
-href="{% url 'shop:home' %}"
-class="continue-shopping-btn"
-> Continue Shopping </a>
-
+    <a
+    href="{% url 'shop:home' %}"
+    class="continue-shopping-btn"
+    > Continue Shopping </a>
+</main>
 {% endblock content %}
